Added category and category form

--- a/src/index.css
+++ b/src/index.css
@@ -165,3 +165,9 @@ span.flatpickr-weekday,
 .rounded-50 {
   border-radius: 50%;
 }
+.khareedo-store-logo {
+  height: 60px;
+}
+.thumb {
+  height: 50px;
+}
